# business-os

./: .env.example  .gitignore  docker-compose.yml  plan.md  run.bat  start.bat  start.ps1  stop.bat
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.celery  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  tasks.py
backend/app/banks/: __init__.py  adapter.py  crypto.py  sber.py  service.py  tinkoff.py
backend/app/middleware/: audit.py
backend/app/routers/: analytics.py  auth.py  banks.py  clients.py  documents.py  expenses.py  payments.py  taxes.py  users.py
backend/app/services/: auth_service.py  client_service.py  tax_service.py
backend/tests/: conftest.py  test_clients.py  test_payments.py  test_tax_service.py
bot/: Dockerfile  pyproject.toml  requirements.txt
bot/app/: config.py  main.py
bot/app/handlers/: __init__.py  bank.py  callbacks.py  clients.py  commands.py  documents.py  expenses.py  mini_app.py  settings.py  text_messages.py
bot/app/keyboards/: __init__.py  inline.py  main_menu.py  pagination.py
bot/app/middlewares/: __init__.py  auth.py  logging.py  rate_limit.py
bot/app/services/: __init__.py  api_client.py  formatters.py  messages.py  validators.py
bot/app/states/: __init__.py  client_states.py  document_states.py  expense_states.py  settings_states.py
document_engine/: Dockerfile  pyproject.toml  requirements.txt
document_engine/app/: config.py  main.py
document_engine/app/generators/: __init__.py  act_generator.py  base.py  gph_generator.py  invoice_generator.py  report_generator.py  waybill_generator.py
document_engine/app/templates/: act.docx  gph_contract.docx  invoice.docx  monthly_report.docx  waybill.docx
document_engine/app/uploaders/: __init__.py  s3_uploader.py
document_engine/app/utils/: docx_to_pdf.py  number_to_words.py  qr_generator.py
document_engine/tests/: test_generators.py  test_pdf_conversion.py
mini-app/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
mini-app/public/: manifest.json
mini-app/src/: App.tsx  config.ts  index.css
mini-app/src/api/: analytics.ts  auth.ts  clients.ts  documents.ts  index.ts  payments.ts  taxes.ts  users.ts
mini-app/src/components/: ChartClients.tsx  ChartExpenses.tsx  ChartRevenue.tsx  ClientCard.tsx  DocumentCard.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExpenseRow.tsx  Header.tsx  Layout.tsx  LoadingSpinner.tsx  Navigation.tsx  PaymentRow.tsx  StatCard.tsx
mini-app/src/context/: AuthContext.tsx
mini-app/src/hooks/: useApi.ts  useAuth.ts  useTelegram.ts  useTheme.ts
mini-app/src/pages/: Analytics.tsx  BankConnection.tsx  ClientDetail.tsx  Clients.tsx  Dashboard.tsx  DocumentDetail.tsx  (+5 more)
nginx/: Dockerfile  nginx.conf
(+4 files in other folders)
